@@ -27,6 +27,7 @@
   * native MacOSX video and audio output plugins
   * DXR3: fix slight shaking in lower third of the image on TV out
     with some MPEG material
+  * fix falling back from multi-buffering in video_out_pgx64
 
 xine-lib (1-rc4a)
   * audio out now uses a more user friendly "Speaker arrangement" config item;
